cluster/infrastructure/authelia/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/version: 4.39.25
  name: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: authelia
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        homelab/authelia-config-hash: 1526efab23457089
      labels:
        app.kubernetes.io/name: authelia
        app.kubernetes.io/version: 4.39.25
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - command:
        - authelia
        image: authelia/authelia:4.39.25
        name: authelia
        ports:
        - containerPort: 9091
          name: http
        - containerPort: 9959
          name: metrics
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
        - mountPath: /secrets/authelia
          name: secrets
          readOnly: true
        - mountPath: /secrets/users
          name: users
          readOnly: true
        - mountPath: /secrets/oidc-clients
          name: oidc-clients
          readOnly: true
        - mountPath: /secrets/postgres
          name: postgres
          readOnly: true
        - mountPath: /assets
          name: assets
          readOnly: true
        - mountPath: /notifications
          name: notifications
        - mountPath: /tmp
          name: tmp
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        readinessProbe:
          httpGet:
            path: /api/health
            port: 9091
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/health
            port: 9091
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 5
      volumes:
      - name: config
        configMap:
          name: authelia-config
      - name: secrets
        secret:
          secretName: authelia-secret
      - name: users
        secret:
          secretName: authelia-users-secret
      - name: oidc-clients
        secret:
          secretName: authelia-oidc-clients-secret
      - name: postgres
        secret:
          secretName: postgres-creds-secret
      - name: assets
        configMap:
          name: authelia-assets
      - name: notifications
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
