cluster/infrastructure/authelia/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/version: 4.39.28
  name: authelia
spec:
  selector:
    app.kubernetes.io/name: authelia
  ports:
  - name: http-authelia
    port: 9091
    targetPort: 9091
