cluster/infrastructure/authelia/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authelia-networkpolicy
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: internal-gateway
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - internal-gateway
          - internal-gateway-secondary
          - blackbox-exporter
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: victoria-metrics
    ports:
    - port: 9959
      protocol: TCP
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - backup-dashboard
          - fleet
          - forgejo
          - gameyfin
          - glitchtip
          - healthchecks
          - kavita
          - limes
          - mail
          - orrery
          - paperless
          - pharos
          - tandoor
          - trilium
          - vault
          - zyme
    ports:
    - port: 9091
      protocol: TCP
